--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,6 +1,8 @@
 @import "statics";
 @import "mixins";
 
+@import "dashboard/dashboard";
+
 a { cursor: pointer; text-decoration: none; color: black; }
 ul { list-style-type: none; margin: 0px; padding: 0px; }
 img { max-width: 100%; height: auto; }
@@ -30,5 +32,5 @@ input::-webkit-inner-spin-button, input::-webkit-outer-spin-button { -webkit-app
 .hidden { display: none!important; }
 html, body, body > div {
 	width: 100%; height: 100%; margin: 0px; padding: 0px; overflow: hidden; font-family: $def-font-stack; font-size: 14px;
-	-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; font-weight: 300; letter-spacing: 0.01em;
+	-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; letter-spacing: 0.01em;
 }
