--- a/stylesheets/dashboard/_dashboard.scss
+++ b/stylesheets/dashboard/_dashboard.scss
@@ -1,28 +1,24 @@
-
-
-$sidebar-width	: 70px;
-$sidebar-clr	: #21252d;
-$sidebar-clr2	: #2b303b;
-$sidebar-shadow	: rgba(48,48,48,0.2);
-
-$menu-size		: 50px;
-$menu-inflated	: 240px;
-$menu-clr		: #788195;
-$menu-act-clr	: #10cfbd;
-$menu-hvr-clr	: #272b35;
-$icon-margin	: 17px;
+@import "category";
+@import "location";
+@import "misc";
+@import "statistic";
+@import "user";
+@import "choices/answer";
+@import "choices/question";
+@import "essay/answer";
+@import "essay/question";
 
 #dashboard-wrapper {
-	width: 100%; height: 100%; display: inline-block; float: left;
+	width: 100%; height: 100%; display: inline-block; float: left; @include clearfix();
 	#dashboard-sidebar {
-		width: $sidebar-width; height: 100%; background: $sidebar-clr; @include box-shadow(4px 0px $sidebar-shadow);
+		width: $sidebar-width; height: 100%; background: $sidebar-clr; @include box-shadow(4px 0px $sidebar-shadow); display: inline-block;
 		#sidebar-logo, #sidebar-user { width: calc(#{$sidebar-width} - 15px); height: calc(#{$sidebar-width} - 15px); padding: 7.5px; position: relative; }
 		#sidebar-menu {
 			width: 100%; height: calc(100% - (#{$sidebar-width} * 2)); background: $sidebar-clr2;
 			#sidebar-menu-wrapper {
 				width: 100%; padding: 15px 0px; color: $menu-clr; @include clearfix();
 				.sidebar-menu-container {
-					width: 100%; padding: 5px 0px;
+					width: 100%; padding: 5px 0px; font-family: $menutitle-font;
 					.sidebar-menu-content {
 						width: $menu-size; height: $menu-size; margin: auto; background: $sidebar-clr; line-height: $menu-size; border-radius: 5px; z-index: 82;
 						& > i { font-size: 17px; margin-left: $icon-margin; }
@@ -49,12 +45,15 @@ $icon-margin	: 17px;
 				&::after, &::before { @include box-sizing(border-box); }
 				&::after { position: absolute; left: -4px; top: 47%; display: inline-block; border-top: 4px solid transparent; border-right: 4px solid $sidebar-clr2; border-bottom: 4px solid transparent; content: ''; }
 				&::before { position: absolute; left: -5px; top: 47%; display: inline-block; border-top: 5px solid transparent; border-right: 5px solid #ccc; border-bottom: 5px solid transparent; border-right-color: rgba(0,0,0,0.2); content: ''; }
-				#dropdown-username { text-align: center; text-transform: uppercase; font-family: $edg-font-stack; }
+				#dropdown-username { text-align: center; text-transform: uppercase; font-family: $username-font; }
 				ul {
-					margin-top: 5px;
+					margin-top: 5px; font-family: $menutitle-font;
 					li { padding: 5px 7.5px; &:hover { background: rgba(white, 0.1); } }
 				}
 			}
 		}
+	}
+	#dashboard-content {
+		width: calc(100% - #{$sidebar-width}); height: calc(100%); display: inline-block; float: right; background: $background-clr;
 	}
 }
