--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -5,8 +5,8 @@
 		</div>
 		<div id="sidebar-menu">
 			<div id="sidebar-menu-wrapper">
-				<div class="sidebar-menu-container" ng-repeat="menu in menus">
-					<div class="sidebar-menu-content cursor-pointer" ng-class="{ active: menu.state == active }" ng-click="setActive(menu.state)">
+				<div class="sidebar-menu-container cursor-pointer" ng-repeat="menu in menus" ng-click="setActive(menu.state)">
+					<div class="sidebar-menu-content" ng-class="{ active: menu.state == active }">
 						<i class="fa fa-{{ menu.icon }}" aria-hidden="true"></i>
 						<span>{{ menu.title }}</span>
 					</div>
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div id="sidebar-user">
-			<div id="user-photo" class="cursor-pointer" style="background-image: url('public/images/Sam_Harris_2016.jpg')" ng-click="openDropdown($event)"></div>
+			<div id="user-photo" class="cursor-pointer" style="background-image: url('public/images/Sam_Harris_2016.jpg')" open-dropdown="showUserMenu"></div>
 			<div id="dropdown-menu" ng-show="showUserMenu">
 				<div id="dropdown-username" class="cursor-default">Username</div>
 				<ul>
@@ -23,4 +23,5 @@
 			</div>
 		</div>
 	</div>
+	<div ui-view id="dashboard-content"></div>
 </div>
