--- a/stylesheets/dashboard/_dashboard.scss
+++ b/stylesheets/dashboard/_dashboard.scss
@@ -20,7 +20,7 @@
 				.sidebar-menu-container {
 					width: 100%; padding: 5px 0px; font-family: $menutitle-font;
 					.sidebar-menu-content {
-						width: $menu-size; height: $menu-size; margin: auto; background: $sidebar-clr; line-height: $menu-size; border-radius: 5px; z-index: 82;
+						width: $menu-size; height: $menu-size; margin: auto; background: $sidebar-clr; line-height: $menu-size; border-radius: 5px; z-index: 82; position:relative;
 						& > i { font-size: 17px; margin-left: $icon-margin; }
 						& > span { display: none; }
 
