--- a/stylesheets/dashboard/_user.scss
+++ b/stylesheets/dashboard/_user.scss
@@ -1,3 +1,48 @@
 #user-wrapper {
-	width: 100%;
+	width: 100%; height: 100%;
+	#user-content {
+		width: calc(100% - (#{$def-padding} * 2)); height: calc(100% - #{$header-heigth} - (#{$def-padding} * 2)); overflow: auto; padding: $def-padding;
+		#user-content-wrapper {
+			width: 100%;
+			.user-card {
+				width: calc(100% - 15px); height: 70px; border: 1px solid #e6e6e6; background: white; border-radius: 5px; overflow: hidden; margin: 0px auto; letter-spacing: -1px; @include clearfix();
+				& > div { display: inline-block; float: left; }
+				& > div:not(.user-gender) { margin-top: 15px; padding: 0px 1%; }
+				.user-gender { height: 100%; width: 1%; &.male { background: $male-color } &.female { background: $female-color; } }
+				.user-label { font-family: $signika-neg; color: $label-clr; }
+				.user-value { width: 100%; font-size: 17px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
+				.user-name { width: 13%; }
+				.user-email { width: 13%; }
+				.user-designation { width: 8%; }
+				.user-institution { width: 8%; }
+				.user-village { width: 13%; }
+				.user-age { width: 3%; }
+				.user-score { width: 10%; }
+				.user-contribution { width: 8%; }
+				.user-actions {
+					width: 5%; text-align: center;
+					.user-value { position: relative; top: -5px; }
+					i {
+						margin: 0px 4px;
+						&.fa-times { color: firebrick; font-size: 23px; position: relative; top: 2px; }
+						&.fa-envelope-open { color: gray; font-size: 16px; }
+					}
+				}
+
+				&:hover { width: 100%; }
+				&:not(:last-child) { margin-bottom: 20px; }
+			}
+		}
+		#user-load-more {
+			width: 100%; line-height: 40px; text-align: center; font-size: 18px; font-family: $signika-neg;
+			&:after { content: ' .'; animation: dots 1s steps(5, end) infinite; }
+
+			@keyframes dots {
+				0%, 20% { color: rgba(black,0); text-shadow: .25em 0 0 rgba(black,0), .5em 0 0 rgba(black,0); }
+				40% { color: black; text-shadow: .25em 0 0 rgba(black,0), .5em 0 0 rgba(black,0); }
+				60% { text-shadow: .25em 0 0 black, .5em 0 0 rgba(black,0); }
+				80%, 100% { text-shadow: .25em 0 0 black, .5em 0 0 black; }
+			}
+		}
+	}
 }
