--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -31,7 +31,15 @@ input::-webkit-inner-spin-button, input::-webkit-outer-spin-button { -webkit-app
     user-select: none;
 }
 .hidden { display: none!important; }
-html, body, body > div {
+html, body, body > div#root {
 	width: 100%; height: 100%; margin: 0px; padding: 0px; overflow: hidden; font-family: $def-font-stack; font-size: 14px;
 	-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; letter-spacing: 0.01em;
+}
+#loading-bar-container {
+	width: 100%; position: fixed;
+	#loading-bar .bar { position: relative; height: 3px; background-color: $loadingcolor; }
+	#loading-bar-spinner {
+		position: relative;
+		.spinner-icon { border-top-color: $loadingcolor; border-left-color: $loadingcolor; position: absolute; right: 15px; }
+	}
 }
