--- a/views/dashboard/user.html
+++ b/views/dashboard/user.html
@@ -4,21 +4,68 @@
 		<div class="header-divider"></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
-			<input type="text" placeholder="type to search user by name" ng-model="search" type-everywhere>
+			<input type="text" placeholder="type to search user by name (min. 3 characters)" ng-model="search" type-everywhere>
 		</div>
 		<div class="header-divider"></div>
 		<div class="header-another">
 			<div class="header-sort">
 				<div class="header-sort-value cursor-default">
-					sort by : <span class="cursor-pointer" open-dropdown="showDropdown">{{ sortby.title }} <i class="fa fa-caret-down" aria-hidden="true"></i></span>
+					order by : <span class="cursor-pointer" open-dropdown="showDropdown">{{ orderby.title }} <i class="fa fa-caret-down" aria-hidden="true"></i></span>
 				</div>
 				<ul class="header-sort-dropdown" ng-show="showDropdown">
-					<li ng-repeat="opt in sortOptions" ng-click="selectSort(opt)" class="cursor-pointer">{{ opt.title }}</li>
+					<li ng-repeat="opt in orderOptions" ng-click="selectSort(opt)" class="cursor-pointer">{{ opt.title }}</li>
 				</ul>
 			</div>
 			<div class="header-button">
-				<div class="button-like cursor-pointer"><i class="fa fa-plus" aria-hidden="true"></i> Add New User</div>
+				<div class="button-like cursor-pointer"><i class="fa fa-plus" aria-hidden="true"></i> New User</div>
 			</div>
 		</div>
+	</div>
+	<div id="user-content">
+		<div id="user-content-wrapper" infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#user-content'">
+			<div class="user-card cursor-pointer" ng-repeat="o in data track by $index">
+				<div class="user-gender" ng-class="{ male: o.usr_gender == 'm', female: o.usr_gender == 'f' }"></div>
+				<div class="user-name">
+					<div class="user-label">name</div>
+					<div class="user-value">{{ o.usr_display_name }}</div>
+				</div>
+				<div class="user-email">
+					<div class="user-label">email</div>
+					<div class="user-value">{{ o.usr_email }}</div>
+				</div>
+				<div class="user-designation">
+					<div class="user-label">designation</div>
+					<div class="user-value">{{ o.usr_designation }}</div>
+				</div>
+				<div class="user-institution">
+					<div class="user-label">institution</div>
+					<div class="user-value">{{ o.name_institution }}</div>
+				</div>
+				<div class="user-village capitalize">
+					<div class="user-label">village</div>
+					<div class="user-value">{{ o.name_desa }}</div>
+				</div>
+				<div class="user-age">
+					<div class="user-label">age</div>
+					<div class="user-value">{{ o.usr_years || '-' }} yo</div>
+				</div>
+				<div class="user-score">
+					<div class="user-label">score</div>
+					<div class="user-value">{{ o.usr_score }} points</div>
+				</div>
+				<div class="user-contribution">
+					<div class="user-label">contribution</div>
+					<div class="user-value">{{ o.usr_contribution }} times</div>
+				</div>
+				<div class="user-actions">
+					<div class="user-label">actions</div>
+					<div class="user-value">
+						<i class="fa fa-envelope-open" aria-hidden="true" title="reset password"></i>
+						<i class="fa fa-times" aria-hidden="true" title="delete {{ o.usr_display_name }}"></i>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="user-load-more" ng-show="pauseAjx">loading data</div>
 	</div>
 </div>
