--- a/stylesheets/_statics.scss
+++ b/stylesheets/_statics.scss
@@ -1,4 +1,5 @@
 $def-font-stack	: "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$signika		: "Signika", sans-serif;
 $signika-neg	: "Signika Negative", sans-serif;
 
 $username-font	: $signika-neg;
@@ -32,3 +33,8 @@ $def-padding	: 25px;
 $male-color		: #41658A;
 $female-color	: #b24f9c;
 $label-clr		: #626262;
+
+$modal-clr		: #f0f0f0;
+
+$float-clr		: #FC7E01;
+$radio-clr		: #FC7E01;
