--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -3,6 +3,7 @@
 @import "global";
 
 @import "dashboard/dashboard";
+@import "dialogs/dialogs";
 
 a { cursor: pointer; text-decoration: none; color: black; }
 ul { list-style-type: none; margin: 0px; padding: 0px; }
