--- a/stylesheets/dashboard/_user.scss
+++ b/stylesheets/dashboard/_user.scss
@@ -11,24 +11,23 @@
 				.user-gender { height: 100%; width: 1%; &.male { background: $male-color } &.female { background: $female-color; } }
 				.user-label { font-family: $signika-neg; color: $label-clr; }
 				.user-value { width: 100%; font-size: 17px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
-				.user-name { width: 15%; }
-				.user-email { width: 15%; }
-				.user-designation { width: 9%; }
-				.user-institution { width: 9%; }
-				.user-village { width: 13%; }
+				.user-name { width: 13%; }
+				.user-email { width: 13%; }
+				.user-designation { width: 8%; }
+				.user-institution { width: 8%; }
+				.user-village { width: 12%; }
 				.user-age { width: 4%; }
 				.user-score { width: 10%; }
 				.user-contribution { width: 8%; }
-				// .user-actions {
-				// 	width: 8%; text-align: center;
-				// 	.user-value { position: relative; top: -5px; }
-				// 	i {
-				// 		margin: 0px 4px;
-				// 		&.fa-pencil { color: cadetblue; font-size: 19px; position: relative; top: 1px; }
-				// 		&.fa-envelope-open { color: gray; font-size: 16px; }
-				// 		&.fa-times { color: firebrick; font-size: 23px; position: relative; top: 2px; }
-				// 	}
-				// }
+				.user-actions {
+					width: 5%; text-align: center; margin: 0px!important;
+					.user-value { position: relative; top: -5px; }
+					i {
+						margin: 0px 4px; line-height: 70px;
+						&.fa-envelope-open { color: gray; font-size: 16px; }
+						&.fa-times { color: firebrick; font-size: 23px; position: relative; top: 2px; }
+					}
+				}
 
 				&:hover { width: 100%; }
 				&:not(:last-child) { margin-bottom: 20px; }
