--- a/stylesheets/dialogs/_dialogs.scss
+++ b/stylesheets/dialogs/_dialogs.scss
@@ -2,12 +2,13 @@
 @import "error";
 @import "notif";
 @import "user";
+@import "question";
 
 .ngdialog {
 	z-index: 50;
 	.ngdialog-content {
 		background: $modal-clr;
-		.modal-header { width: 100%; font-family: $signika; font-size: 30px; font-weight: bolder; text-align: center; padding: 10px 0px; }
+		.modal-header { width: 100%; font-family: $signika; font-size: 30px; font-weight: bolder; text-align: center; padding: 10px 0px; letter-spacing: -2px; }
 		.modal-content { text-align: center; margin: 25px 0px; font-size: 14px; }
 		button { width: 50%; margin: auto; height: 30px; font-size: 13px; border-radius: 3px; border: none; display: block; }
 	}
