--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -34,7 +34,7 @@ input::-webkit-inner-spin-button, input::-webkit-outer-spin-button { -webkit-app
 .hidden { display: none!important; }
 html, body, body > div#root {
 	width: 100%; height: 100%; margin: 0px; padding: 0px; overflow: hidden; font-family: $def-font-stack; font-size: 14px;
-	-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; letter-spacing: 0.01em;
+	-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; letter-spacing: -0.5px;
 }
 #loading-bar-container {
 	width: 100%; position: fixed;
