--- a/views/dashboard/choices/answer.html
+++ b/views/dashboard/choices/answer.html
@@ -1,1 +1,47 @@
-Ini Multiple Choices answer.
+<div id="choicesans-wrapper">
+	<div class="header">
+		<div class="header-title cursor-default">multiple choice answers</div>
+		<div class="header-divider"></div>
+		<div class="header-input-container">
+			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
+			<input type="text" placeholder="type to search multiple choice answer by user (min. 3 characters)" ng-model="search" type-everywhere>
+		</div>
+		<div class="header-divider"></div>
+		<div class="header-another">
+			<div class="header-sort">
+				<div class="header-sort-container cursor-pointer" open-dropdown="showDropdown">
+					<div class="header-sort-title"><span>category</span> :</div>
+					<div class="header-sort-value"><span>{{ category.name }}</span> <i class="fa fa-caret-down" aria-hidden="true"></i></div>
+				</div>
+				<ul class="header-sort-dropdown" ng-show="showDropdown">
+					<li ng-repeat="opt in ::categories" ng-click="selectCate(opt)" class="cursor-pointer">{{ opt.name }}</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div id="choicesans-content" class="dash-content">
+		<div id="choicesans-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#choicesans-content'">
+			<div class="choicesans-card cursor-default masonry-brick" ng-repeat="o in data track by $index" ng-class="{ 'wrong-answer': o.correct_response !== o.status_answer }">
+				<div class="choicesans-flag" force-height></div>
+				<div class="choicesans-value">
+					<div class="choicesans-question-container">
+						<div class="dash-label">question</div>
+						<div class="dash-value choicesans-question">{{ o.question_text }}</div>
+					</div>
+					<div class="choicesans-divider"></div>
+					<div class="choicesans-answer-container">
+						<div class="dash-label">answer by <strong>{{ o.usr_display_name }}</strong></div>
+						<div class="dash-value choicesans-answer">{{ o['response_' + o.status_answer] }}</div>
+					</div>
+					<div class="choicesans-divider"></div>
+					<div class="choicesans-timestamp">
+						submited: <span>{{ toDate(o.answered_date) }}</span>
+					</div>
+				</div>
+				<i class="fa fa-times cursor-pointer" ng-click="delete(o.ID, o.usr_display_name, $event)"><md-tooltip md-autohide="true">delete this answer</md-tooltip></i>
+			</div>
+		</div>
+		<div class="dash-load-more" class="cursor-default" ng-show="pauseAjx">{{ loading }}</div>
+		<div class="dash-no-data" class="cursor-default" ng-show="nodata">{{ nodata }}</div>
+	</div>
+</div>
