--- a/stylesheets/dashboard/_user.scss
+++ b/stylesheets/dashboard/_user.scss
@@ -1,10 +1,12 @@
+$card-height	: 70px;
+
 #user-wrapper {
 	width: 100%; height: 100%;
 	#user-content {
 		#user-content-wrapper {
 			width: 100%;
 			.user-card {
-				width: calc(100% - 15px); height: 70px;  overflow: hidden; margin: 0px auto; letter-spacing: -1px; @include clearfix(); @include cardDefault();
+				width: calc(100% - 15px); height: $card-height; overflow: hidden; margin: 0px auto; letter-spacing: -1px; @include clearfix(); @include cardDefault();
 				& > div { display: inline-block; float: left; }
 				& > div:not(.user-gender) { margin-top: 15px; padding: 0px 1%; }
 				.user-gender { height: 100%; width: 1%; &.male { background: $male-color } &.female { background: $female-color; } }
@@ -18,11 +20,13 @@
 				.user-contribution { width: 8%; }
 				.user-actions {
 					width: 5%; text-align: center; margin: 0px!important;
-					.user-value { position: relative; top: -5px; }
-					i {
-						margin: 0px 4px; line-height: 70px;
-						&.fa-envelope-open { color: gray; font-size: 16px; }
-						&.fa-times { color: firebrick; font-size: 23px; position: relative; top: 2px; }
+					.dash-value {
+						display: flex; height: $card-height; align-items: center;
+						i {
+							margin: 0px 4px;
+							&.fa-envelope-open { color: gray; font-size: 16px; }
+							&.fa-times { color: firebrick; font-size: 22px; }
+						}
 					}
 				}
 
