--- a/stylesheets/dashboard/choices/_question.scss
+++ b/stylesheets/dashboard/choices/_question.scss
@@ -11,7 +11,7 @@ $card-width	: 375px;
 				.choices-divider { width: 100%; border-bottom: 1px solid #ddd; margin: 10px 0px; }
 				.choices-question-container {
 					width: 98%; padding: 0px 1%;
-					.choices-question { @include defJustify(); }
+					.choices-question { font-size: 15px; @include defJustify(); }
 				}
 				.choices-answer-container {
 					width: 100%; @include clearfix();
