--- a/views/dashboard/essay/question.html
+++ b/views/dashboard/essay/question.html
@@ -4,7 +4,7 @@
 		<div class="header-divider"></div>
 		<div class="header-input-container">
 			<div class="search-sign"><i class="fa fa-search" aria-hidden="true"></i></div>
-			<input type="text" placeholder="type to search multiple choice by question (min. 3 characters)" ng-model="search" type-everywhere>
+			<input type="text" placeholder="type to search essay by question (min. 3 characters)" ng-model="search" type-everywhere>
 		</div>
 		<div class="header-divider"></div>
 		<div class="header-another">
@@ -24,7 +24,7 @@
 	</div>
 	<div id="essay-content" class="dash-content">
 		<div id="essay-content-wrapper" masonry preserve-order infinite-scroll='loadMoar()' infinite-scroll-disabled='pauseAjx || doneAjx' infinite-scroll-distance='1' infinite-scroll-container="'#essay-content'">
-			<div class="essay-card cursor-pointer masonry-brick" ng-repeat="o in data track by $index" ng-class="{ noenabled: !o.question_enabled }" ng-click="edit(o.id)">
+			<div class="essay-card cursor-pointer masonry-brick" ng-repeat="o in data track by $index" ng-class="" ng-click="edit(o.id)">
 				<div class="essay-question-container">
 					<div class="dash-label">question</div>
 					<div class="dash-value essay-question">{{ o.question }}</div>
@@ -33,7 +33,7 @@
 				<div class="essay-category">
 					category: <span class="color-{{ o.ID_category }}">{{ o.category_name }}</span>
 				</div>
-				<i class="fa fa-times" ng-click="delete(o.id, o.question, $event)"></i>
+				<i class="fa fa-times" ng-click="delete(o.id, o.question, $event)"><md-tooltip md-autohide="true">delete this question</md-tooltip></i>
 			</div>
 		</div>
 		<div class="dash-load-more" class="cursor-default" ng-show="pauseAjx">{{ loading }}</div>
